--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+openai = "^1.33.0"
+et-xmlfile = "1.1.0"
+openpyxl = "3.1.2"
 
 
 [build-system]
