--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 openai = "^1.33.0"
 et-xmlfile = "1.1.0"
 openpyxl = "3.1.2"
+pandasai = {extras = ["excel"], version = "^2.1.1"}
+pyyaml = "^6.0.1"
 
 
 [build-system]
