--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ et-xmlfile = "1.1.0"
 openpyxl = "3.1.2"
 pandasai = {extras = ["excel"], version = "^2.1.1"}
 pyyaml = "^6.0.1"
+typer = "^0.12.3"
 
 
 [build-system]
