--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,13 @@ pyyaml = "^6.0.1"
 typer = "^0.12.3"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.4.2"
+isort = "^5.13.2"
+
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
